# docker_poetry_django

./: .pre-commit-config.yaml  README.md  pyproject.toml
backend/backend/: settings.py
backend/kernel/: settings.py
ci/compose/: kernel.yaml
ci/dockerfiles/: .backend-dev.dockerignore  backend-dev.Dockerfile
ci/requirements/: backend-dev-requirements.txt  requirements.txt
proxy/proxy/: items.py  settings.py
proxy/proxy/spiders/: proxy_cz_scrap.py  scrap_proxy_list.py
