[tool.poetry]
name = "test"
version = "0.1.0"
description = "project for univ involving docker poetry and django"
authors = ["GalaxUniv <afterhoursbilly@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
django-import-export = "^3.3.1"
scrapy = "^2.11.0"
pre-commit = "^3.5.0"
psycopg = "^3.1.13"
poetry-plugin-export = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
